# mwms

./: .gitignore  .stylelintrc.json  BACKEND_SCHEMA.md  FRONTEND_DESIGN_SCHEMA.md  IMPLEMENTATION_ROADMAP.md  LICENSE.txt  LICENSING.md  MULTI_SITE_ARCHITECTURE.md  PAGES_WORKFLOW.md  PERMISSION_SYSTEM.md  README.md  SECURITY_AUDIT.md  SETTINGS_REGISTRY.md  WMS_plan.txt  package-lock.json  package.json  start.sh
audit/: js-licenses-2026-05-28.tsv  python-licenses-2026-05-28.json
backend/: .env.example  README.md  pyproject.toml
backend/tests/: conftest.py  test_admin_orgmeta.py  test_admin_titles.py  test_admin_users.py  test_admin_users_bulk_purge.py  test_admin_users_purge.py  test_auth.py  test_first_login_password_change.py  test_health.py  test_hierarchy.py  test_inventory.py  test_login_guard.py  test_mfa.py  test_password_policy.py  test_production_recipe_crud.py  test_profile.py  test_purchase_uom_conversion.py  test_receiving.py  test_security_audit_batch2.py  test_security_audit_batch3.py  test_security_audit_fixes.py  test_security_audit_quickwins.py  test_shipping.py  test_sites.py  test_uom_conversion.py  test_uploads.py  test_user_mgmt_e2e.py  test_workflow_e2e.py  test_workflow_e2e_create.py
backend/wms/: __init__.py  main.py
backend/wms/api/v1/: admin_orgmeta.py  admin_titles.py  admin_users.py  auth.py  health.py  inventory.py  mfa.py  policy.py  production.py  profile.py  quality.py  receiving.py  reports.py  settings.py  shipping.py  sites.py
backend/wms/core/: config.py  deps.py  security.py
backend/wms/db/: base.py  session.py
backend/wms/models/: __init__.py  core.py  inventory.py  ops.py  orgmeta.py  production.py  titles.py
backend/wms/schemas/: auth.py  inventory.py  production.py  profile.py  quality.py  receiving.py  shipping.py  titles.py
backend/wms/seeders/: seed.py  wipe_users.py
backend/wms/services/: audit_log.py  hierarchy.py  inventory.py  login_guard.py  metrics.py  mfa.py  orgmeta.py  password_policy.py  production.py  profile.py  quality.py  receiving.py  shipping.py  titles.py  uom_conversion.py  uploads.py  users_admin.py
docs/: BACKEND_SCHEMA.md  MULTI_SITE_ARCHITECTURE.md  PAGES_WORKFLOW.md
docs/_archive/: answers.txt
frontend/: README.md  admin-branding.html  admin-orgmeta.html  admin-settings.html  admin-sites.html  admin.html  index.html  inventory.html  login.html  production.html  profile.html  quality.html  receiving.html  reports.html  shipping.html  users.html
frontend/scripts/: admin-orgmeta.js  admin-settings.js  admin-sites.js  api.js  confirm-modal.js  creators.js  dashboard.js  inventory.js  multi-line-modal.js  nav-init.js  production.js  shell.js  (+8 more)
(+6 files in other folders)
