[project]
name = "wms-backend"
version = "0.1.0"
description = "WMS Software backend API (FastAPI + SQLAlchemy)"
requires-python = ">=3.11"
# SECURITY_AUDIT.md L-2: upper bounds prevent a breaking major release from
# silently landing in CI. Bumps are intentional — review and widen as needed.
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "bcrypt>=4.1,<6",
    "python-jose[cryptography]>=3.3,<4",
    "python-multipart>=0.0.9,<1",
    "email-validator>=2.1,<3",
    "Pillow>=10.3,<13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["wms*"]
exclude = ["data*", "tests*", ".venv*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10",
    "pytest-asyncio>=0.23,<2",
    # pytest-xdist (`-n auto`) parallelizes by process. The test suite is safe
    # because each test gets its own in-memory SQLite engine via the db_engine
    # fixture, and the login_guard IP bucket is neutralized per-test in conftest.
    "pytest-xdist>=3.5,<4",
    "httpx>=0.27,<1",
    "ruff>=0.3,<1",
    "faker>=24.0,<50",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
